split builds into 2 scripts

--- a/.github/workflows/Update-Box86.yml
+++ b/.github/workflows/Update-Box86.yml
@@ -35,15 +35,22 @@ jobs:
       - name: List GPG keys
         run: gpg -K
 
-      # generate a deb
-      - name: Set up multiarch/qemu-user-static
+      - name: generate bionic debs
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - uses: docker://multiarch/ubuntu-core:armhf-bionic
+        with:
+          args: >
+            bash /github/workspace/create-deb-bionic.sh || true
+
+      - name: generate focal debs
         run: |
           docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - uses: docker://multiarch/ubuntu-core:armhf-focal
         with:
           args: >
-            bash /github/workspace/create-deb.sh || true
-            
+            bash /github/workspace/create-deb-focal.sh || true
+        
       - name: Write new package to repo
         run: |
           export DIRECTORY="$GITHUB_WORKSPACE"
