--- a/.github/workflows/Update-Box86.yml
+++ b/.github/workflows/Update-Box86.yml
@@ -94,6 +94,8 @@ jobs:
       run:
         shell: bash
 
+    needs: update-box86-bionic
+
     steps:
       - name: Install dependencies
         run: |
